manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
  generation: 1
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: gitpod
    app.kubernetes.io/name: gitpod-proxy
    app.kubernetes.io/part-of: gitpod
  name: gitpod-proxy
  namespace: gitpod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "gitpod.central.dev.cloud.ilab-nlb.de"
    - "*.gitpod.central.dev.cloud.ilab-nlb.de"
    - "*.ws.gitpod.central.dev.cloud.ilab-nlb.de"
    secretName: https-certificates
  rules:
  - host: gitpod.central.dev.cloud.ilab-nlb.de
    http: &http_rules
      paths:
      - backend:
          service:
            name: proxy
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: "*.gitpod.central.dev.cloud.ilab-nlb.de"
    http: *http_rules
  - host: "*.ws.gitpod.central.dev.cloud.ilab-nlb.de"
    http: *http_rules
